--- a/OneESP32ToRuleThemAll/yaml/common.yaml
+++ b/OneESP32ToRuleThemAll/yaml/common.yaml
@@ -1,15 +1,15 @@
 esphome:
   includes:
-    - OneESP32ToRuleThemAll/src/callback_handler.h
-    - OneESP32ToRuleThemAll/src/communication.h
-    - OneESP32ToRuleThemAll/src/mapper.h
-    - OneESP32ToRuleThemAll/src/mapper.cpp
-    - OneESP32ToRuleThemAll/src/property.h
-    - OneESP32ToRuleThemAll/src/property.cpp
-    - OneESP32ToRuleThemAll/src/simple_variant.h
-    - OneESP32ToRuleThemAll/src/type.h
-    - OneESP32ToRuleThemAll/src/type.cpp
-    - OneESP32ToRuleThemAll/src/util.h
+    - github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/src/callback_handler.h
+    - github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/src/communication.h
+    - github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/src/mapper.h
+    - github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/src/mapper.cpp
+    - github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/src/property.h
+    - github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/src/property.cpp
+    - github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/src/simple_variant.h
+    - github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/src/type.h
+    - github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/src/type.cpp
+    - github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/src/util.h
   platformio_options:
     build_flags:
       - "-DESPCLIENT_ID=$espclient_can_id"
@@ -115,30 +115,30 @@ interval:
 #                                       #
 #########################################
 packages:
-  VERDICHTER_STARTS:                 !include { file: wp_generic_combined.yaml, vars: { sensor_name: "VERDICHTER_STARTS"           , scaled_property: "VERDICHTER_STARTS_K"       , property: "VERDICHTER_STARTS"         , unit: ""   , accuracy_decimals: "0", scaler: "1000", icon: "mdi:counter" }}
-  WAERMEERTRAG_WW_SUMME_MWH:         !include { file: wp_generic_combined.yaml, vars: { sensor_name: "WAERMEERTRAG_WW_SUMME_MWH"   , scaled_property: "WAERMEERTRAG_WW_SUM_KWH"   , property: "WAERMEERTRAG_WW_SUM_MWH"   , unit: "MWh", accuracy_decimals: "3", icon: "mdi:fire" }}
-  WAERMEERTRAG_HEIZ_SUMME_MWH:       !include { file: wp_generic_combined.yaml, vars: { sensor_name: "WAERMEERTRAG_HEIZ_SUMME_MWH" , scaled_property: "WAERMEERTRAG_HEIZ_SUM_KWH" , property: "WAERMEERTRAG_HEIZ_SUM_MWH" , unit: "MWh", accuracy_decimals: "3", icon: "mdi:fire" }}
+  VERDICHTER_STARTS:                 !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_generic_combined.yaml, vars: { sensor_name: "VERDICHTER_STARTS"           , scaled_property: "VERDICHTER_STARTS_K"       , property: "VERDICHTER_STARTS"         , unit: ""   , accuracy_decimals: "0", scaler: "1000", icon: "mdi:counter" }}
+  WAERMEERTRAG_WW_SUMME_MWH:         !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_generic_combined.yaml, vars: { sensor_name: "WAERMEERTRAG_WW_SUMME_MWH"   , scaled_property: "WAERMEERTRAG_WW_SUM_KWH"   , property: "WAERMEERTRAG_WW_SUM_MWH"   , unit: "MWh", accuracy_decimals: "3", icon: "mdi:fire" }}
+  WAERMEERTRAG_HEIZ_SUMME_MWH:       !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_generic_combined.yaml, vars: { sensor_name: "WAERMEERTRAG_HEIZ_SUMME_MWH" , scaled_property: "WAERMEERTRAG_HEIZ_SUM_KWH" , property: "WAERMEERTRAG_HEIZ_SUM_MWH" , unit: "MWh", accuracy_decimals: "3", icon: "mdi:fire" }}
 
-  SPEICHERSOLLTEMP:                  !include { file: wp_temperature.yaml, vars: { property: "SPEICHERSOLLTEMP"          }}
-  SPEICHERISTTEMP:                   !include { file: wp_temperature.yaml, vars: { property: "SPEICHERISTTEMP"          , update_interval: $interval_medium }}
-  AUSSENTEMP:                        !include { file: wp_temperature.yaml, vars: { property: "AUSSENTEMP"       }}
-  RUECKLAUFISTTEMP:                  !include { file: wp_temperature.yaml, vars: { property: "RUECKLAUFISTTEMP"         , update_interval: $interval_medium }}
-  VORLAUFISTTEMP:                    !include { file: wp_temperature.yaml, vars: { property: "VORLAUFISTTEMP"           , update_interval: $interval_medium, target: "HK1" }}
-  RAUMISTTEMP:                       !include { file: wp_temperature.yaml, vars: { property: "RAUMISTTEMP"              , target: "HK1" }}
-  VERSTELLTE_RAUMSOLLTEMP:           !include { file: wp_temperature.yaml, vars: { property: "VERSTELLTE_RAUMSOLLTEMP"  , target: "HK1" }}
-  VORLAUFSOLLTEMP:                   !include { file: wp_temperature.yaml, vars: { property: "VORLAUFSOLLTEMP"          , target: "HK1" }}
+  SPEICHERSOLLTEMP:                  !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_temperature.yaml, vars: { property: "SPEICHERSOLLTEMP"          }}
+  SPEICHERISTTEMP:                   !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_temperature.yaml, vars: { property: "SPEICHERISTTEMP"          , update_interval: $interval_medium }}
+  AUSSENTEMP:                        !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_temperature.yaml, vars: { property: "AUSSENTEMP"       }}
+  RUECKLAUFISTTEMP:                  !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_temperature.yaml, vars: { property: "RUECKLAUFISTTEMP"         , update_interval: $interval_medium }}
+  VORLAUFISTTEMP:                    !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_temperature.yaml, vars: { property: "VORLAUFISTTEMP"           , update_interval: $interval_medium, target: "HK1" }}
+  RAUMISTTEMP:                       !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_temperature.yaml, vars: { property: "RAUMISTTEMP"              , target: "HK1" }}
+  VERSTELLTE_RAUMSOLLTEMP:           !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_temperature.yaml, vars: { property: "VERSTELLTE_RAUMSOLLTEMP"  , target: "HK1" }}
+  VORLAUFSOLLTEMP:                   !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_temperature.yaml, vars: { property: "VORLAUFSOLLTEMP"          , target: "HK1" }}
 
-  FEHLERMELDUNG:                     !include { file: wp_generic.yaml, vars: { property: "FEHLERMELDUNG"      , icon: "mdi:alert-circle" }}
-  RAUMFEUCHTE:                       !include { file: wp_generic.yaml, vars: { property: "RAUMFEUCHTE"        , interval: $interval_very_slow, unit: "%", icon: "mdi:water-percent", target: "HK1", accuracy_decimals: "1" }}
-  STEIGUNG_HK1:                      !include { file: wp_number.yaml, vars: { property: "STEIGUNG_HK1"       , icon: "mdi:valve", target: "HK1", min: "0", max: "5.0", step: "0.01"}}
-  RAUMEINFLUSS:                      !include { file: wp_number.yaml, vars: { property: "RAUMEINFLUSS", target: "HK1" }}
+  FEHLERMELDUNG:                     !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_generic.yaml, vars: { property: "FEHLERMELDUNG"      , icon: "mdi:alert-circle" }}
+  RAUMFEUCHTE:                       !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_generic.yaml, vars: { property: "RAUMFEUCHTE"        , interval: $interval_very_slow, unit: "%", icon: "mdi:water-percent", target: "HK1", accuracy_decimals: "1" }}
+  STEIGUNG_HK1:                      !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_number.yaml, vars: { property: "STEIGUNG_HK1"       , icon: "mdi:valve", target: "HK1", min: "0", max: "5.0", step: "0.01"}}
+  RAUMEINFLUSS:                      !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_number.yaml, vars: { property: "RAUMEINFLUSS", target: "HK1" }}
 
-  EL_ENERGIEAUFNAHME_WW_SUMME_KWH:   !include { file: wp_daily_energy_combined.yaml, vars: { sensor_name: "EL_ENERGIEAUFNAHME_WW_SUMME_KWH"   , property_wh: "EL_ENERGIEAUFNAHME_WW_TAG_WH"   , property_kwh: "EL_ENERGIEAUFNAHME_WW_TAG_KWH"   }}
-  EL_ENERGIEAUFNAHME_HEIZ_SUMME_KWH: !include { file: wp_daily_energy_combined.yaml, vars: { sensor_name: "EL_ENERGIEAUFNAHME_HEIZ_SUMME_KWH" , property_wh: "EL_ENERGIEAUFNAHME_HEIZ_TAG_WH" , property_kwh: "EL_ENERGIEAUFNAHME_HEIZ_TAG_KWH" }}
-  WAERMEERTRAG_WW_TAG_SUMME_KWH:     !include { file: wp_daily_energy_combined.yaml, vars: { sensor_name: "WAERMEERTRAG_WW_TAG_SUMME_KWH"     , property_wh: "WAERMEERTRAG_WW_TAG_WH"         , property_kwh: "WAERMEERTRAG_WW_TAG_KWH"         }}
-  WAERMEERTRAG_HEIZ_TAG_SUMME_KWH:   !include { file: wp_daily_energy_combined.yaml, vars: { sensor_name: "WAERMEERTRAG_HEIZ_TAG_SUMME_KWH"   , property_wh: "WAERMEERTRAG_HEIZ_TAG_WH"       , property_kwh: "WAERMEERTRAG_HEIZ_TAG_KWH"       }}
+  EL_ENERGIEAUFNAHME_WW_SUMME_KWH:   !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_daily_energy_combined.yaml, vars: { sensor_name: "EL_ENERGIEAUFNAHME_WW_SUMME_KWH"   , property_wh: "EL_ENERGIEAUFNAHME_WW_TAG_WH"   , property_kwh: "EL_ENERGIEAUFNAHME_WW_TAG_KWH"   }}
+  EL_ENERGIEAUFNAHME_HEIZ_SUMME_KWH: !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_daily_energy_combined.yaml, vars: { sensor_name: "EL_ENERGIEAUFNAHME_HEIZ_SUMME_KWH" , property_wh: "EL_ENERGIEAUFNAHME_HEIZ_TAG_WH" , property_kwh: "EL_ENERGIEAUFNAHME_HEIZ_TAG_KWH" }}
+  WAERMEERTRAG_WW_TAG_SUMME_KWH:     !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_daily_energy_combined.yaml, vars: { sensor_name: "WAERMEERTRAG_WW_TAG_SUMME_KWH"     , property_wh: "WAERMEERTRAG_WW_TAG_WH"         , property_kwh: "WAERMEERTRAG_WW_TAG_KWH"         }}
+  WAERMEERTRAG_HEIZ_TAG_SUMME_KWH:   !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_daily_energy_combined.yaml, vars: { sensor_name: "WAERMEERTRAG_HEIZ_TAG_SUMME_KWH"   , property_wh: "WAERMEERTRAG_HEIZ_TAG_WH"       , property_kwh: "WAERMEERTRAG_HEIZ_TAG_KWH"       }}
 
-  HEATPUMP_DATETIME: !include { file: wp_datetime.yaml }
+  HEATPUMP_DATETIME: !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_datetime.yaml }
 
 
 #########################################
