--- a/OneESP32ToRuleThemAll/yaml/thz5_5_eco.yaml
+++ b/OneESP32ToRuleThemAll/yaml/thz5_5_eco.yaml
@@ -4,7 +4,7 @@ esphome:
       - "-DTHZ_5_5_ECO"
 
 packages:
-  COMMON: !include { file: common.yaml }
-  BASE:   !include { file: wp_base.yaml }
+  COMMON: !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/common.yaml }
+  BASE:   !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_base.yaml }
 
-  ZEITSPERRE_NE:            !include { file: wp_number.yaml , vars: { property: "ZEITSPERRE_NE" , icon: "mdi:valve" , min: "0", max: "360", step: "5.0" }}
+  ZEITSPERRE_NE:            !include { file: github://PhagoZ/Tecalor/OneESP32ToRuleThemAll/yaml/wp_number.yaml , vars: { property: "ZEITSPERRE_NE" , icon: "mdi:valve" , min: "0", max: "360", step: "5.0" }}
